<resources>
    <string name="app_name">NavigationApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">First name</string>
    <string name="lastname">Last name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_first_name">Enter your first name</string>
    <string name="enter_last_name">Enter your last name</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="clear">Clear</string>
    <string name="login">Login</string>
    <string name="signUp">Sign Up</string>
    <string name="logout">Log out</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="do_not_have_account">Don\'t have an account?</string>
    <string name="welcome">Welcome</string>
    <string name="entry">Entry</string>
    <string name="list">List</string>
    <string name="activity_type">Activity Type</string>
    <string name="enter_activity_type">Enter activity type</string>
    <string name="entry_date">Entry Date</string>
    <string name="enter_entry_date">Enter entry date</string>
    <string name="day">Day</string>
    <string name="enter_day">Enter day</string>
    <string name="month">Month</string>
    <string name="enter_month">Enter month</string>
    <string name="year">Year</string>
    <string name="enter_year">Enter year</string>
    <string name="time">Time</string>
    <string name="enter_time">Enter time</string>
    <string name="duration">Duration</string>
    <string name="enter_duration">Enter duration</string>
    <string name="distance">Distance</string>
    <string name="enter_distance">Enter distance</string>
    <string name="weight">Weight</string>
    <string name="enter_weight">Enter weight</string>
    <string name="place">Place</string>
    <string name="enter_place">Enter place</string>
    <string name="remark">Remark</string>
    <string name="enter_remark">Enter remark</string>
    <string name="activity_entry">Activity Entry</string>
    <string name="save">Save</string>
    <string name="activity_list">Activity List</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
