<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".LoginFragment">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="16sp" />

        <EditText
                android:id="@+id/editLogInUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:autofillHints=""
                android:inputType="text"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_username"
                android:textSize="16sp" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="16sp" />

        <EditText
                android:id="@+id/editLogInPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal">

        <Button
                android:id="@+id/btnLogInLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:background="@color/dark_green"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />

        <Button
                android:id="@+id/btnLogInClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:background="@color/red"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:text="@string/do_not_have_account"
                android:textColor="@color/black"
                android:textSize="16sp" />

        <TextView
                android:id="@+id/txtGotoSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/login"
                android:textColor="@color/blue"
                android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>
